--- a/ZipExtractor/ZipExtractor.csproj
+++ b/ZipExtractor/ZipExtractor.csproj
@@ -58,7 +58,8 @@
     <SignAssembly>true</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>ZipExtractor.snk</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>
+    </AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup />
   <PropertyGroup>
@@ -109,7 +110,6 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <None Include="ZipExtractor.snk" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\ZipExtractor.png" />
